# btcode

./: .gitignore  Free-project.pptx  meson.build  meson_options.txt
include/: btcode.h  common.h
src/: btcode.c  dct.c  dct.h  gen_tables.c  meson.build
tests/: check_steps.c  meson.build
tools/: dec_parse_file.c  dec_read_input.c  dec_write_output.c  enc_parse_file.c  enc_read_input.c  enc_write_output.c  main.c  meson.build
